fix placeholder visibility when using spotlight mode

--- a/src/blocks/gallery-stacked/styles/editor.scss
+++ b/src/blocks/gallery-stacked/styles/editor.scss
@@ -41,7 +41,7 @@
 
 // Needed until GB 6.9 is merged into core or backward support.
 // Hide the placeholder when not selected.
-.editor-block-list__block[data-type="coblocks/gallery-stacked"]:not(.is-selected) {
+.editor-block-list__block[data-type="coblocks/gallery-stacked"]:not(.is-selected):not(.is-selected):not(.is-focused)  {
 	div.components-form-file-upload {
 		display: none;
 	} 
